--- a/outreach.html
+++ b/outreach.html
@@ -52,68 +52,40 @@
 				<div class="wrapper style1">
 
 					<div class="container">
-						<div class="row">
-							<div class="col-4 col-12-mobile" id="sidebar">
-								<hr class="first" />
-								<section>
-									<header>
-										<h3><a href="#">Sed lorem etiam consequat</a></h3>
-									</header>
-									<p>
-										Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-									</p>
-									<div class="row gtr-50">
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>PACE</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>PGC</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>Lorem feugiat magna</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>Sed tempus fringilla</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
-										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
-										</div>
-										<div class="col-8">
-											<h4>Malesuada fermentum</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
-										</div>
-									</div>
-									<footer>
-										<a href="#" class="button">Magna Adipiscing</a>
-									</footer>
-								</section>
-							</div>
+						<div class="row gtr-200">
+							<div class="col-8 col-12-mobile imp-mobile" id="content">
+								<article id="main">
+									<section>
+										<header>
+											<h3>Pace</h3>
+										</header>
+										<a href="#" class="image featured"><img src="images/umg_spec_ex.jpg" alt="" style="float:left;" /></a>
+										<p>
+											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
+											quenching of massive galaxies at early epochs. Recently, the Massive Ancient Galaxies At z > 3 NEar-infrared (MAGAZ3NE)
+											survey spectroscopically confirmed the existence of rare ultra-massive galaxies (UMGs, M* > 1011 M⊙) from 3 < z < 4. 
+											These studies suggest that a significant fraction of UMGs experienced a period of bursty star-formation followed by 
+											rapid quenching between 4 < z < 5, motivating the need for spectroscopic confirmation and characterization of UMGs at this 
+											crucial epoch. Using multi-band, wide-field imaging from the MAGAZ3NE collaboration in the XMM-VIDEO and COSMOS UltraVISTA 
+											fields, we identified a sample of UMGs with zphot > 4. We observed each of the 4 UMG candidates for ~4 hours with Keck/LRIS 
+											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. 
+										</p>
+
+									</section>
+									<section>
+										<header>
+											<h3>Augue euismod feugiat tempus</h3>
+										</header>
+										<p>
+											Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
+											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
+											ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
+											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+										</p>
+									</section>
+								</article>
+							</div>		
+	
 						</div>
 					</div>
 
