--- a/outreach.html
+++ b/outreach.html
@@ -52,14 +52,14 @@
 				<div class="wrapper style1">
 
 					<div class="container">
-						<div class="row gtr-200">
+						<div class="row0">
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
 										<header>
 											<h3>Pace</h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/umg_spec_ex.jpg" alt="" style="float:left;" /></a>
+										<a href="#" class="image featured"><img src="hubbledeep.jpg" alt="" style="float:left;" /></a>
 										<p>
 											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
 											quenching of massive galaxies at early epochs. Recently, the Massive Ancient Galaxies At z > 3 NEar-infrared (MAGAZ3NE)
