--- a/outreach.html
+++ b/outreach.html
@@ -52,23 +52,17 @@
 				<div class="wrapper style1">
 
 					<div class="container">
-						<div class="row0">
+						<div class="row">
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
 										<header>
 											<h3>Pace</h3>
 										</header>
-										<a href="#" class="image featured"><img src="hubbledeep.jpg" alt="" style="float:left;" /></a>
+										<a href="#" class="image featured"><img src="hubbledeep.jpg" alt="" style="float:left" /></a>
 										<p>
 											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
-											quenching of massive galaxies at early epochs. Recently, the Massive Ancient Galaxies At z > 3 NEar-infrared (MAGAZ3NE)
-											survey spectroscopically confirmed the existence of rare ultra-massive galaxies (UMGs, M* > 1011 M⊙) from 3 < z < 4. 
-											These studies suggest that a significant fraction of UMGs experienced a period of bursty star-formation followed by 
-											rapid quenching between 4 < z < 5, motivating the need for spectroscopic confirmation and characterization of UMGs at this 
-											crucial epoch. Using multi-band, wide-field imaging from the MAGAZ3NE collaboration in the XMM-VIDEO and COSMOS UltraVISTA 
-											fields, we identified a sample of UMGs with zphot > 4. We observed each of the 4 UMG candidates for ~4 hours with Keck/LRIS 
-											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. 
+											quenchbreak, or other ISM features. 
 										</p>
 
 									</section>
