--- a/outreach.html
+++ b/outreach.html
@@ -56,14 +56,12 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
-										<header>
-											<h3>Pace</h3>
-										</header>
-										<a href="#" class="image featured"><img src="hubbledeep.jpg" alt="" style="float:left" /></a>
-										<p>
-											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
-											quenchbreak, or other ISM features. 
-										</p>
+										<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" style="float:left" /></a>
+										<div style="float:right">
+											<p>
+											Pace is a 
+											</p>
+										</div>
 
 									</section>
 									<section>
