--- a/outreach.html
+++ b/outreach.html
@@ -56,10 +56,12 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
-										<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" style="float:left" /></a>
+										<div style="float:left">
+											<a href="#" class="image featured"><img src="images/pic06.jpg" alt=""/></a>
+										</div>
 										<div style="float:right">
 											<p>
-											Pace is a 
+											Pace is a program
 											</p>
 										</div>
 
