--- a/outreach.html
+++ b/outreach.html
@@ -56,15 +56,17 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
-										<div style="float:left">
-											<a href="#" class="image featured"><img src="images/pic06.jpg" alt=""/></a>
+										<div class="row gtr-50">
+											<div class="col-4">
+												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+											</div>
+											<div class="col-8">
+												<h4>Nibh sed cubilia</h4>
+												<p>
+												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												</p>
+											</div>
 										</div>
-										<div style="float:right">
-											<p>
-											Pace is a program
-											</p>
-										</div>
-
 									</section>
 									<section>
 										<header>
