--- a/outreach.html
+++ b/outreach.html
@@ -56,12 +56,12 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
-										<div class="row gtr-50">
+										<div class="row gtr-200">
 											<div class="col-4">
 												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 											</div>
 											<div class="col-8">
-												<h4>Nibh sed cubilia</h4>
+												<h4>PACE</h4>
 												<p>
 												Amet nullam fringilla nibh nulla convallis tique ante proin.
 												</p>
@@ -69,15 +69,30 @@
 										</div>
 									</section>
 									<section>
-										<header>
-											<h3>Augue euismod feugiat tempus</h3>
-										</header>
-										<p>
-											Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
+										<div class="row gtr-200">
+											<div class="col-4">
+												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+											</div>
+											<div class="col-8">
+												<h4>PGC</h4>
+												<p>
+												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												</p>
+											</div>
+										</div>
+									</section>
+									<section>
+										<div class="row gtr-200">
+											<div class="col-4">
+												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+											</div>
+											<div class="col-8">
+												<h4>Blog</h4>
+												<p>
+												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												</p>
+											</div>
+										</div>
 									</section>
 								</article>
 							</div>		
