--- a/teaching.html
+++ b/teaching.html
@@ -53,16 +53,41 @@
 
 					<div class="container">
 						<article id="main" class="special">
-							<header>
-								<h3>Past classes taught</h3>
-							</header>
 							<section>
 								<header>
-									<h3>Spectroscopic Redshift Survey in EGS field using Keck/DEIMOS: Preparation for the Cosmic Evolution Early Release Science Survey</h3>
+									<h3>P20E Life in the Universe (TA)</h3>
 								</header>
 								<p>
-									<span style="color:#00008B">Stephanie M. Urbano Stawinski</span>, M. C. Cooper <br>
-									<a href="#"><span style="color:#E49B0F">In prep.</span></a>
+								</p>
+								<header>
+									<h3>P20A Introduction to Astronomy (TA)</h3>
+								</header>
+								<p>
+								</p>
+								<header>
+									<h3>P61C Introduction to Astrophysics (TA) </h3>
+								</header>
+								<p>
+								</p>
+								<header>
+									<h3>P20B Cosmology (TA)</h3>
+								</header>
+								<p>
+								</p>
+								<header>
+									<h3>P3LC Basic Physics Laboratory - Optics (TA)</h3>
+								</header>
+								<p>
+								</p>
+								<header>
+									<h3>ASTR 109 Astronomy Lab (Course Instructor - SDSU) </h3>
+								</header>
+								<p>
+								</p>
+								<header>
+									<h3>AST 113/114 Astronomy Lab (Course Instructor - ASU) </h3>
+								</header>
+								<p>
 								</p>
 						</article>
 					</div>
