--- a/contact.html
+++ b/contact.html
@@ -32,20 +32,14 @@
 								<li>
 									<a href="#">Research</a>
 									<ul>
-										<li><a href="#">High-Redshift Lya Emitters</a></li>
-										<li><a href="#">Ultra-Massive Galaxies</a></li>
-										<li><a href="#">Diffuse Gas around Galaxies (CGM)</a></li>
+										<li><a href="lyaE.html">High-Redshift Lya Emitters</a></li>
+										<li><a href="umgs.html">Ultra-Massive Galaxies</a></li>
+										<li><a href="cgm.html">Diffuse Gas around Galaxies (CGM)</a></li>
 									</ul>
 								</li>
-								<li>
-									<a href="#">Outreach</a>
-									<ul>
-										<li><a href="#">PACE</a></li>
-										<li><a href="#">PGC</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Publications</a></li>
-								<li><a href="right-sidebar.html">Teaching</a></li>
+								<li><a href="pub.html">Publications</a></li>
+								<li><a href="outreach.html">Outreach & Service</a></li>
+								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
 							</ul>
@@ -69,7 +63,7 @@
 										University of California, Irvine</p>
 										<p>UCI Email: sstawins [at] uci.edu<br>
 										Gmail: ststawinski [at] gmail.com</p>
-										<p>Twitter: XX </p>
+										<p>Twitter: <a href="https://twitter.com/astrostawinski"> @astrostawinski </a>  </p>
 									</section>
 
 								<!-- Copyright -->
