--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
 					<header>
 						<h3>About Me...</h3>
 						<p>
-						I am a third year Astrophysics Ph.D student at University of California, Irvine studying galaxy evolution. In 2019, I earned
-my MS in Astronomy at San Diego State University studying gas around galaxies and its effects on the central galaxy. I am mainly interested in the evolution of high-redshift galaxies and their surroundings. 
-In the past I have searched for signatures of dust in the regions between galaxies (intergalactic medium) and have worked significantly in studying the exchange of gas in the circumgalactic medium around 
-distant galaxies. Currently I am looking for signatures of Lya emission from galaxies in the very distant universe. Outside of research, I am enthusiastic about teaching and astronomy outreach.
+						I am a third year Astrophysics Ph.D student at University of California, Irvine interested in galaxy formation and evolution. In 2019, I earned
+						my MS in Astronomy at San Diego State University studying the gas around galaxies and its effects on the host galaxy. Currently, 
+						I work on high-redshift galaxy surveys. 
+						formed in the early Universe. <br>
+						Throughout my career, I have had the opportunity to have many great mentors. <br>
+						Outside of academia, I enjoy camping.   
 						</p>
 					</header>
 				</section>
