--- a/outreach.html
+++ b/outreach.html
@@ -61,9 +61,14 @@
 												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 											</div>
 											<div class="col-8">
-												<h4>PACE</h4>
+												<h4>Physics & Astronomy Community Excellence (PACE)</h4>
 												<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												<a href="https://uci-pace.github.io/">PACE</a> is a graduate student led peer-mentoring program at UCI. The goal of the program is to help graduate students
+												at all levels to be successful in grad school as well as teach our mentors valuable leadership and mentorship skills. 
+												In my second year at UCI, I joined the PACE leadership team and now am running the program with three other team members. 
+												Our programs include - Exceleration (1-on-1 grad peer mentoring for first-year graduates), Fire Up Fridays 
+												(bi-weekly group workshops for incoming grads), and Attitude Thrusters (group workshops for graduates at all levels). PACE
+												is very thankful to be funded by <a href="https://aas.org/nolp">AAS - National Osterbrock Leadership Program (NOLP). </a>
 												</p>
 											</div>
 										</div>
@@ -71,12 +76,19 @@
 									<section>
 										<div class="row gtr-200">
 											<div class="col-4">
-												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+												<a href="#" class="image fit"><img src="images/BlogLogo.png" alt="" /></a>
 											</div>
 											<div class="col-8">
-												<h4>PGC</h4>
+												<h4></h4>
 												<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												<a href="https://www.physastroblog.ps.uci.edu/">The UCI Physics and Astronomy Blog</a> is a graduate student run organization that focuses on communication and 
+												outreach efforts within the Physics and Astronomy department at UCI. Our goal is to increase awareness of the department activities and research accomplishments, as well as communicate 
+												relevant physics topics through outreach. The Blog team produces a quarterly newsletter which advertises upcoming events, features current 
+												research achievements, and highlights an outstanding graduate student in the department. We also write bite-size articles that summarize recent 
+												published work by students and faculty. To help with outreach, the Blog team creates videos explaining interesting topics in physics. I have been
+												on the team since my first year at UCI, and have multiple roles on the team. Mainly I have been in charge of our departments 
+												<a href="https://www.physastroblog.ps.uci.edu/category/student-spotlight/">graduate student spotlight </a>, which
+												seeks to call attention to graduate students that have done extraordinary things within our department. 
 												</p>
 											</div>
 										</div>
