--- a/outreach.html
+++ b/outreach.html
@@ -56,7 +56,7 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<section>
-										<div class="row gtr-200">
+										<div class="row">
 											<div class="col-4">
 												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 											</div>
@@ -74,7 +74,7 @@
 										</div>
 									</section>
 									<section>
-										<div class="row gtr-200">
+										<div class="row">
 											<div class="col-4">
 												<a href="#" class="image fit"><img src="images/BlogLogo.png" alt="" /></a>
 											</div>
