--- a/outreach.html
+++ b/outreach.html
@@ -58,9 +58,8 @@
 									<section>
 										<div class="row">
 											<div class="col-4">
-												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 											</div>
-											<div class="col-8">
+											<div class="col-12">
 												<h4>Physics & Astronomy Community Excellence (PACE)</h4>
 												<p>
 												<a href="https://uci-pace.github.io/">PACE</a> is a graduate student led peer-mentoring program at UCI. The goal of the program is to help graduate students
@@ -79,7 +78,7 @@
 												<a href="#" class="image fit"><img src="images/BlogLogo.png" alt="" /></a>
 											</div>
 											<div class="col-8">
-												<h4></h4>
+												<h4>The UCI Physics and Astronomy Blog</h4>
 												<p>
 												<a href="https://www.physastroblog.ps.uci.edu/">The UCI Physics and Astronomy Blog</a> is a graduate student run organization that focuses on communication and 
 												outreach efforts within the Physics and Astronomy department at UCI. Our goal is to increase awareness of the department activities and research accomplishments, as well as communicate 
@@ -96,12 +95,10 @@
 									<section>
 										<div class="row gtr-200">
 											<div class="col-4">
-												<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 											</div>
 											<div class="col-8">
-												<h4>Blog</h4>
+												<h4>Physics Grad Cacus (PGC)</h4>
 												<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
 												</p>
 											</div>
 										</div>
