--- a/outreach.html
+++ b/outreach.html
@@ -82,9 +82,7 @@
 												<p>
 												<a href="https://www.physastroblog.ps.uci.edu/">The UCI Physics and Astronomy Blog</a> is a graduate student run organization that focuses on communication and 
 												outreach efforts within the Physics and Astronomy department at UCI. Our goal is to increase awareness of the department activities and research accomplishments, as well as communicate 
-												relevant physics topics through outreach. The Blog team produces a quarterly newsletter which advertises upcoming events, features current 
-												research achievements, and highlights an outstanding graduate student in the department. We also write bite-size articles that summarize recent 
-												published work by students and faculty. To help with outreach, the Blog team creates videos explaining interesting topics in physics. I have been
+												relevant physics topics through outreach. I have been
 												on the team since my first year at UCI, and have multiple roles on the team. Mainly I have been in charge of our departments 
 												<a href="https://www.physastroblog.ps.uci.edu/category/student-spotlight/">graduate student spotlight </a>, which
 												seeks to call attention to graduate students that have done extraordinary things within our department. 
@@ -99,6 +97,9 @@
 											<div class="col-8">
 												<h4>Physics Grad Cacus (PGC)</h4>
 												<p>
+												I am also an officer for the <a href="https://sites.uci.edu/physicsgradcaucus/">UCI Physics Grad Cacus</a>, which is a graduate student-run organization within the Department of Physics and Astronomy 
+												that seeks to support and improve academic and career success, foster individual and community well-being, and be a voice for graduate students 
+												within our department.
 												</p>
 											</div>
 										</div>
