--- a/outreach.html
+++ b/outreach.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Outreach & Service </title>
+		<title>Outreach & Service</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -52,66 +52,62 @@
 				<div class="wrapper style1">
 
 					<div class="container">
-						<div class="row">
-							<div class="col-8 col-12-mobile imp-mobile" id="content">
-								<article id="main">
-									<section>
-										<div class="row">
-											<div class="col-4">
-											</div>
-											<div class="col-12">
-												<h4>Physics & Astronomy Community Excellence (PACE)</h4>
-												<p>
-												<a href="https://uci-pace.github.io/">PACE</a> is a graduate student led peer-mentoring program at UCI. The goal of the program is to help graduate students
-												at all levels to be successful in grad school as well as teach our mentors valuable leadership and mentorship skills. 
-												In my second year at UCI, I joined the PACE leadership team and now am running the program with three other team members. 
-												Our programs include - Exceleration (1-on-1 grad peer mentoring for first-year graduates), Fire Up Fridays 
-												(bi-weekly group workshops for incoming grads), and Attitude Thrusters (group workshops for graduates at all levels). PACE
-												is very thankful to be funded by <a href="https://aas.org/nolp">AAS - National Osterbrock Leadership Program (NOLP). </a>
-												</p>
-											</div>
-										</div>
-									</section>
-									<section>
-										<div class="row">
-											<div class="col-4">
-												<a href="#" class="image fit"><img src="images/BlogLogo.png" alt="" /></a>
-											</div>
-											<div class="col-8">
-												<h4>The UCI Physics and Astronomy Blog</h4>
-												<p>
-												<a href="https://www.physastroblog.ps.uci.edu/">The UCI Physics and Astronomy Blog</a> is a graduate student run organization that focuses on communication and 
-												outreach efforts within the Physics and Astronomy department at UCI. Our goal is to increase awareness of the department activities and research accomplishments, as well as communicate 
-												relevant physics topics through outreach. I have been
-												on the team since my first year at UCI, and have multiple roles on the team. Mainly I have been in charge of our departments 
-												<a href="https://www.physastroblog.ps.uci.edu/category/student-spotlight/">graduate student spotlight </a>, which
-												seeks to call attention to graduate students that have done extraordinary things within our department. 
-												</p>
-											</div>
-										</div>
-									</section>
-									<section>
-										<div class="row gtr-200">
-											<div class="col-4">
-											</div>
-											<div class="col-8">
-												<h4>Physics Grad Cacus (PGC)</h4>
-												<p>
-												I am also an officer for the <a href="https://sites.uci.edu/physicsgradcaucus/">UCI Physics Grad Cacus</a>, which is a graduate student-run organization within the Department of Physics and Astronomy 
-												that seeks to support and improve academic and career success, foster individual and community well-being, and be a voice for graduate students 
-												within our department.
-												</p>
-											</div>
-										</div>
-									</section>
-								</article>
-							</div>		
-	
-						</div>
+						<article id="main" class="special">
+							<header>
+								<h3>First Author</h3>
+							</header>
+							<section>
+								<div class="row">
+									<div class="col-4">
+									</div>
+									<div class="col-12">
+										<h4>Physics & Astronomy Community Excellence (PACE)</h4>
+										<p>
+										<a href="https://uci-pace.github.io/">PACE</a> is a graduate student led peer-mentoring program at UCI. The goal of the program is to help graduate students
+										at all levels to be successful in grad school as well as teach our mentors valuable leadership and mentorship skills. 
+										In my second year at UCI, I joined the PACE leadership team and now am running the program with three other team members. 
+										Our programs include - Exceleration (1-on-1 grad peer mentoring for first-year graduates), Fire Up Fridays 
+										(bi-weekly group workshops for incoming grads), and Attitude Thrusters (group workshops for graduates at all levels). PACE
+										is very thankful to be funded by <a href="https://aas.org/nolp">AAS - National Osterbrock Leadership Program (NOLP). </a>
+										</p>
+									</div>
+								</div>
+							</section>
+							<section>
+								<div class="row">
+									<div class="col-4">
+										<a href="#" class="image fit"><img src="images/BlogLogo.png" alt="" /></a>
+									</div>
+									<div class="col-8">
+										<h4>The UCI Physics and Astronomy Blog</h4>
+										<p>
+										<a href="https://www.physastroblog.ps.uci.edu/">The UCI Physics and Astronomy Blog</a> is a graduate student run organization that focuses on communication and 
+										outreach efforts within the Physics and Astronomy department at UCI. Our goal is to increase awareness of the department activities and research accomplishments, as well as communicate 
+										relevant physics topics through outreach. I have been
+										on the team since my first year at UCI, and have multiple roles on the team. Mainly I have been in charge of our departments 
+										<a href="https://www.physastroblog.ps.uci.edu/category/student-spotlight/">graduate student spotlight </a>, which
+										seeks to call attention to graduate students that have done extraordinary things within our department. 
+										</p>
+									</div>
+								</div>
+							</section>
+							<section>
+								<div class="row gtr-200">
+									<div class="col-4">
+									</div>
+									<div class="col-8">
+										<h4>Physics Grad Cacus (PGC)</h4>
+										<p>
+											I am also an officer for the <a href="https://sites.uci.edu/physicsgradcaucus/">UCI Physics Grad Cacus</a>, which is a graduate student-run organization within the Department of Physics and Astronomy 
+											that seeks to support and improve academic and career success, foster individual and community well-being, and be a voice for graduate students 
+											within our department.
+										</p>
+									</div>
+								</div>
+							</section>
+						</article>
 					</div>
-
 				</div>
-
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
