--- a/outreach.html
+++ b/outreach.html
@@ -54,7 +54,7 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h3>First Author</h3>
+								<h3>Organizations</h3>
 							</header>
 							<section>
 								<div class="row">
@@ -101,6 +101,20 @@
 											I am also an officer for the <a href="https://sites.uci.edu/physicsgradcaucus/">UCI Physics Grad Cacus</a>, which is a graduate student-run organization within the Department of Physics and Astronomy 
 											that seeks to support and improve academic and career success, foster individual and community well-being, and be a voice for graduate students 
 											within our department.
+										</p>
+									</div>
+								</div>
+							</section>
+							<header>
+								<h3>Community Outreach</h3>
+							</header>
+							<section>
+								<div class="row">
+									<div class="col-12">
+										<h4>Mount Laguna Observatory Summer Program</h4>
+										<p>
+										At San Diego State University, I was able to help with the Mount Laguna Observatory Summer Program, which provides lectures and telescope
+										viewings for the community. 
 										</p>
 									</div>
 								</div>
