--- a/outreach.html
+++ b/outreach.html
@@ -56,6 +56,9 @@
 							<header>
 								<h3>Organizations</h3>
 							</header>
+							<p>
+								I currently am part of a few organizations at UCI that bolster the success of graduate students and provide
+								science communication within the department.
 							<section>
 								<div class="row">
 									<div class="col-4">
@@ -108,6 +111,10 @@
 							<header>
 								<h3>Community Outreach</h3>
 							</header>
+							<p>
+								Throughout my career, I have been involved with community outreach. Here are some of the programs/workshops I had the opportunity 
+								to be a part of!
+							</p>
 							<section>
 								<div class="row">
 									<div class="col-12">
