--- a/outreach.html
+++ b/outreach.html
@@ -57,8 +57,8 @@
 								<h3>Organizations</h3>
 							</header>
 							<p>
-								I currently am part of a few organizations at UCI that bolster the success of graduate students and provide
-								science communication within the department.
+								At UCI, I am currently part of some organizations that seek to bolster the success of graduate students and provide
+								science communication within the department. Read more about them below!
 							<section>
 								<div class="row">
 									<div class="col-4">
@@ -118,10 +118,23 @@
 							<section>
 								<div class="row">
 									<div class="col-12">
+										<h4>Community Astronomy Lecturer</h4>
+										<p>
+										I give workshops to kids in the community about solar system science at the Lancaster Woodland Preserve in CA.
+										</p>
 										<h4>Mount Laguna Observatory Summer Program</h4>
 										<p>
 										At San Diego State University, I was able to help with the Mount Laguna Observatory Summer Program, which provides lectures and telescope
 										viewings for the community. 
+										</p>
+										<h4>Planetarium Show Presenter</h4>
+										<p>
+										During the community fair nights at San Diego State, I created and gave planetarium shows. I also trained others to use the planetarium.
+										</p>
+										<h4>Telescope Night Lecturer</h4>
+										<p>
+										At San Diego State University and Arizona State University, I had the opportunity to prepare and give night sky tours to the community, ranging
+										from elementary school age to undergraduate students. 
 										</p>
 									</div>
 								</div>
