--- a/index.html
+++ b/index.html
@@ -48,21 +48,22 @@
 						</nav>
 
 				</div>
+			<!-- Main -->
+				<div class="wrapper style1">
 
-			<!-- Banner -->
-				<section id="banner">
-					<header>
-						<h3>About Me...</h3>
-						<p>
+					<div class="container">
+						<article id="main" class="special">
+							<header>
+								<h3>About me</h3>
+							</header>
+							<p>
 						I am a third year Astrophysics Ph.D student at University of California, Irvine interested in galaxy formation and evolution. In 2019, I earned
 						my MS in Astronomy at San Diego State University studying the gas around galaxies and its effects on the host galaxy. Currently, 
 						I work on high-redshift galaxy surveys. 
 						formed in the early Universe. <br>
 						Throughout my career, I have had the opportunity to have many great mentors. <br>
-						Outside of academia, I enjoy camping.   
-						</p>
-					</header>
-				</section>
+						Outside of academia, I enjoy camping.
+							</p>
 
 
 
