--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 						Throughout my career, I have had the opportunity to have many great mentors. <br>
 						Outside of academia, I enjoy camping.
 							</p>
-
+						</article>
+					</div>
+				</div>
 
 
 			<!-- Footer -->
