--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						I am a third year Astrophysics Ph.D student at University of California, Irvine interested in galaxy formation and evolution. In 2019, I earned
 						my MS in Astronomy at San Diego State University studying the gas around galaxies and its effects on the host galaxy. At UCI, 
 						I have been working on high-redshift galaxy surveys. Using the telescopes at Keck, I have observed distant LyA Emitters in the CEERS field and currently 
-						am searching for LyA emission from Ultra-Massive galaxies. <br>
+						I am searching for LyA emission from Ultra-Massive galaxies at z > 4. <br>
 						Outside of my research, I believe mentorship, teaching, and outreach are 
 						incredibly important in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I have 
 						worked to give back to the community in this way. I have volunteered in many outreach efforts and mentorship programs (read more about them <a href="outreach.html">here</a>).   <br>
