--- a/umgs.html
+++ b/umgs.html
@@ -55,7 +55,7 @@
 	
 								<section>
 									<header>
-										<h3>Recent Publications </h3>
+										<h3>Recent Publications</h3>
 									</header>
 									<p>
 										This is under construction, to be updated soon!
@@ -67,7 +67,7 @@
 										<div class="col-8">
 											<h4>Nibh sed cubilia</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												
 											</p>
 									</div>
 
@@ -84,28 +84,16 @@
 										<p>
 											A major outstanding question in galaxy evolution lies in the mechanisms behind the rapid formation and subsequent
 											quenching of massive galaxies at early epochs. Recently, the Massive Ancient Galaxies At z > 3 NEar-infrared (MAGAZ3NE)
-											survey spectroscopically confirmed the existence of rare ultra-massive galaxies (UMGs, M* > 1011 M⊙) from 3 < z < 4. 
+											survey spectroscopically confirmed the existence of rare ultra-massive galaxies (UMGs, M<sub>*</sub> > 10<sup>11</sup> M<sub>⊙</sub>) from 3 < z < 4. 
 											These studies suggest that a significant fraction of UMGs experienced a period of bursty star-formation followed by 
 											rapid quenching between 4 < z < 5, motivating the need for spectroscopic confirmation and characterization of UMGs at this 
-											crucial epoch. Using multi-band, wide-field imaging from the MAGAZ3NE collaboration in the XMM-VIDEO and COSMOS UltraVISTA 
-											fields, we identified a sample of UMGs with zphot > 4. We observed each of the 4 UMG candidates for ~4 hours with Keck/LRIS 
-											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. 
+											crucial epoch. 
 										</p>
 										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
-										</p>
-									</section>
-									<section>
-										<header>
-											<h3>Augue euismod feugiat tempus</h3>
-										</header>
-										<p>
-											Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+											Using multi-band, wide-field imaging from the MAGAZ3NE collaboration in the XMM-VIDEO and COSMOS UltraVISTA 
+											fields, we identified a sample of UMGs with z<sub>phot</sub> > 4. We observed each of the 4 UMG candidates for ~4 hours with Keck/LRIS 
+											over a broad wavelength range to cover any potential Lyman-alpha emission, Lyman-break, or other ISM features. We use Pypeit to reduce a
+											coadded spectrum. 
 										</p>
 									</section>
 								</article>
