--- a/lyaE.html
+++ b/lyaE.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>UMGs</title>
+		<title>Lyα </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1>Ultra-Massive Galaxies</h1>
+								<h1>Lyα Emitters</h1>
 							</header>
 						</div>
 
@@ -65,9 +65,9 @@
 											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Nibh sed cubilia</h4>
+											<h4></h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												
 											</p>
 									</div>
 
@@ -77,28 +77,22 @@
 								<article id="main">
 									<section>
 										<header>
-											<h3>LyaE in CEERs</h3>
+											<h3>Lyα Emitters in CEERs</h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/lyaE_ex.jpg" alt="" /></a>
 
 										<p>
-											Under construction
-										</p>
+										We are approaching a new era in the field of high-redshift galaxies with the launch of the James Webb Space Telescope (JWST). 
+										Thus, it is critical to provide a robust sample of potential targets, as well as understand galaxies in the epochs near reionization
+										to bridge the gap between current and future observations. We present the results from 2 ongoing spectroscopic surveys to analyze 
+										Lyman-α emitters at the epoch before reionization (z~4-6). 
 										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
-										</p>
-									</section>
-									<section>
-										<header>
-											<h3>Augue euismod feugiat tempus</h3>
-										</header>
-										<p>
-											Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+											We introduce an extensive survey of z > 3 Lyman-α emitters in the EGS field. Using HST photometry, we select ~800 potential
+											Lyman-α emitters with z<sub>phot</sub> > 3 for spectroscopic follow up with Keck/DEIMOS. We confirm 63 Lyman-α emitters 
+											at 4 < z < 6, including 5 with z > 6. Our observations will help constrain the Lyman-α fraction from 4 < z < 6 in an independent 
+											field from previous studies. In addition, this survey will greatly assist target selection for The Cosmic Evolution Early Release Science 
+											Survey (CEERS), which will study >400 galaxies in the EGS field within the first 5 months of JWST science observations.										</p>
+											
 										</p>
 									</section>
 								</article>
