--- a/cgm.html
+++ b/cgm.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>UMGs</title>
+		<title>CGM/title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1>Circumgalatic Medium</h1>
+								<h1>Circumgalatic Medium of Damped Lyman- Systems</h1>
 							</header>
 						</div>
 
@@ -65,9 +65,8 @@
 											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Nibh sed cubilia</h4>
+											<h4></h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
 											</p>
 									</div>
 
@@ -81,26 +80,16 @@
 										</header>
 										<a href="#" class="image featured"><img src="images/cgmofDLAs_ex.jpg" alt="" /></a>
 
+										<p>									</p>
 										<p>
-											under construction
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
-										</p>
-									</section>
-									<section>
-										<header>
-											<h3>Augue euismod feugiat tempus</h3>
-										</header>
-										<p>
-											Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+										We use medium- and high-resolution spectroscopy of close pairs of quasars to analyze the circum-
+										galactic medium (CGM) surrounding 32 damped Lyα absorption systems (DLAs). The primary quasar
+										sightline in each pair probes an intervening DLA in the redshift range 1.6 < z<sub>abs</sub> < 3.5, such that the
+										secondary sightline probes absorption from Lyα and a large suite of metal-line transitions (including
+										O I, C II, C IV, Si II, and Si IV) in the DLA’s CGM at transverse distances 24 kpc ≤ R<\sub>⊥</sub> ≤ 284 kpc.	
 										</p>
 									</section>
+
 								</article>
 							</div>
 						</div>
